Removing overflow to fix issue with legend heading

--- a/packages/components/fieldset/_fieldset.scss
+++ b/packages/components/fieldset/_fieldset.scss
@@ -28,7 +28,6 @@
   display: table; /* 2 */
   margin-bottom: nhsuk-spacing(2);
   max-width: 100%; /* 1 */
-  overflow: hidden;
   padding: 0;
   white-space: normal;    /* 4 */
 }
